--- a/client/package.json
+++ b/client/package.json
@@ -10,15 +10,25 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.46.1",
+    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cookie": "^0.6.0",
+    "@types/jsonwebtoken": "^9.0.7",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.0.3",
+    "nookies": "^2.5.2",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "supabase": "^1.219.2"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nookies": "^1.1.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
